--- a/public/css/service/mobile.css
+++ b/public/css/service/mobile.css
@@ -1,12 +1,37 @@
 .feature-item {
-    font-size: 1.5rem;
-    padding: 20px;
-    border-bottom: 3px solid transparent; /* Initial transparent border-bottom */
-    transition: 0.3s ease-in-out;
-  }
+  font-size: 1.5rem;
+  padding: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.feature-item::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px; /* Set your desired border-bottom height */
+  background-color: yourBorderColor; /* Set your desired border color */
+  transform: scaleX(0); /* Initial state with no width */
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
+}
+
+.feature-item:hover::before {
+  transform: scaleX(1); /* Fully reveal the border on hover */
+}
 
 .feature-item:hover {
     font-weight: bold;
     border-bottom-width: 5px; /* Increase border-bottom width on hover */
 }
 
+.text-performance {
+  color: #888; /* Initial text color */
+  transition: color 0.3s ease-in-out; /* Transition for color change */
+}
+
+.text-performance:hover {
+  color: #000; /* Text color on hover */
+}
